--- a/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeters.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_serviceperimeters.yaml
@@ -3035,9 +3035,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -3155,9 +3157,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -3414,9 +3418,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -3534,9 +3540,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -3934,9 +3942,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -4054,9 +4064,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -4313,9 +4325,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -4433,9 +4447,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -4932,9 +4948,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -5052,9 +5070,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -5232,9 +5252,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
@@ -5352,9 +5374,11 @@ spec:
                               properties:
                                 identities:
                                   description: |-
-                                    A list of identities that are allowed access through this ingress policy.
-                                    Should be in the format of email address. The email address should represent
-                                    individual user or service account only.
+                                    Identities can be an individual user, service account, Google group,
+                                    or third-party identity. For third-party identity, only single identities
+                                    are supported and other identity types are not supported.The v1 identities
+                                    that have the prefix user, group and serviceAccount in
+                                    https://cloud.google.com/iam/docs/principal-identifiers#v1 are supported.
                                   items:
                                     type: string
                                   type: array
