--- a/package/crds/healthcare.gcp.upbound.io_datasets.yaml
+++ b/package/crds/healthcare.gcp.upbound.io_datasets.yaml
@@ -74,7 +74,7 @@ spec:
                 properties:
                   encryptionSpec:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       kmsKeyName:
@@ -192,7 +192,7 @@ spec:
                 properties:
                   encryptionSpec:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       kmsKeyName:
@@ -478,7 +478,7 @@ spec:
                 properties:
                   encryptionSpec:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       kmsKeyName:
