--- a/package/crds/compute.gcp.upbound.io_regionnetworkfirewallpolicyassociations.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionnetworkfirewallpolicyassociations.yaml
@@ -153,7 +153,7 @@ spec:
                         type: object
                     type: object
                   firewallPolicy:
-                    description: The firewall policy ID of the association.
+                    description: The firewall policy of the resource.
                     type: string
                   firewallPolicyRef:
                     description: Reference to a RegionNetworkFirewallPolicy in compute
@@ -232,7 +232,9 @@ spec:
                         type: object
                     type: object
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   region:
                     description: The location of this resource.
@@ -329,7 +331,9 @@ spec:
                         type: object
                     type: object
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                 type: object
               managementPolicies:
@@ -509,13 +513,15 @@ spec:
                     description: The target that the firewall policy is attached to.
                     type: string
                   firewallPolicy:
-                    description: The firewall policy ID of the association.
+                    description: The firewall policy of the resource.
                     type: string
                   id:
                     description: an identifier for the resource with format projects/{{project}}/regions/{{region}}/firewallPolicies/{{firewall_policy}}/associations/{{name}}
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   region:
                     description: The location of this resource.
