bigquery: multiple changes
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/package/crds/bigquery.gcp.upbound.io_analyticshubdataexchanges.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_analyticshubdataexchanges.yaml
@@ -106,6 +106,21 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  sharingEnvironmentConfig:
+                    description: |-
+                      Configurable data sharing environment option for a data exchange.
+                      This field is required for data clean room exchanges.
+                      Structure is documented below.
+                    properties:
+                      dcrExchangeConfig:
+                        description: Data Clean Room (DCR), used for privacy-safe
+                          and secured data sharing.
+                        type: object
+                      defaultExchangeConfig:
+                        description: Default Analytics Hub data exchange, used for
+                          secured data sharing.
+                        type: object
+                    type: object
                 type: object
               initProvider:
                 description: |-
@@ -152,6 +167,21 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  sharingEnvironmentConfig:
+                    description: |-
+                      Configurable data sharing environment option for a data exchange.
+                      This field is required for data clean room exchanges.
+                      Structure is documented below.
+                    properties:
+                      dcrExchangeConfig:
+                        description: Data Clean Room (DCR), used for privacy-safe
+                          and secured data sharing.
+                        type: object
+                      defaultExchangeConfig:
+                        description: Default Analytics Hub data exchange, used for
+                          secured data sharing.
+                        type: object
+                    type: object
                 type: object
               managementPolicies:
                 default:
@@ -382,6 +412,21 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  sharingEnvironmentConfig:
+                    description: |-
+                      Configurable data sharing environment option for a data exchange.
+                      This field is required for data clean room exchanges.
+                      Structure is documented below.
+                    properties:
+                      dcrExchangeConfig:
+                        description: Data Clean Room (DCR), used for privacy-safe
+                          and secured data sharing.
+                        type: object
+                      defaultExchangeConfig:
+                        description: Default Analytics Hub data exchange, used for
+                          secured data sharing.
+                        type: object
+                    type: object
                 type: object
               conditions:
                 description: Conditions of the resource.
