--- a/package/crds/bigquery.gcp.upbound.io_datasets.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_datasets.yaml
@@ -2019,6 +2019,36 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        condition:
+                          description: |-
+                            Condition for the binding. If CEL expression in this field is true, this
+                            access binding will be considered.
+                            Structure is documented below.
+                          properties:
+                            description:
+                              description: A user-friendly description of the dataset
+                              type: string
+                            expression:
+                              description: Textual representation of an expression
+                                in Common Expression Language syntax.
+                              type: string
+                            location:
+                              description: |-
+                                The geographic location where the dataset should reside.
+                                See official docs.
+                                There are two types of locations, regional or multi-regional. A regional
+                                location is a specific geographic place, such as Tokyo, and a multi-regional
+                                location is a large geographic area, such as the United States, that
+                                contains at least two geographic places.
+                                The default value is multi-regional location US.
+                                Changing this forces a new resource to be created.
+                              type: string
+                            title:
+                              description: |-
+                                Title for the expression, i.e. a short string describing its purpose.
+                                This can be used e.g. in UIs which allow to enter the expression.
+                              type: string
+                          type: object
                         dataset:
                           description: |-
                             Grants all resources of particular types in a particular dataset read access to the current dataset.
@@ -2729,6 +2759,36 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        condition:
+                          description: |-
+                            Condition for the binding. If CEL expression in this field is true, this
+                            access binding will be considered.
+                            Structure is documented below.
+                          properties:
+                            description:
+                              description: A user-friendly description of the dataset
+                              type: string
+                            expression:
+                              description: Textual representation of an expression
+                                in Common Expression Language syntax.
+                              type: string
+                            location:
+                              description: |-
+                                The geographic location where the dataset should reside.
+                                See official docs.
+                                There are two types of locations, regional or multi-regional. A regional
+                                location is a specific geographic place, such as Tokyo, and a multi-regional
+                                location is a large geographic area, such as the United States, that
+                                contains at least two geographic places.
+                                The default value is multi-regional location US.
+                                Changing this forces a new resource to be created.
+                              type: string
+                            title:
+                              description: |-
+                                Title for the expression, i.e. a short string describing its purpose.
+                                This can be used e.g. in UIs which allow to enter the expression.
+                              type: string
+                          type: object
                         dataset:
                           description: |-
                             Grants all resources of particular types in a particular dataset read access to the current dataset.
@@ -3593,6 +3653,36 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        condition:
+                          description: |-
+                            Condition for the binding. If CEL expression in this field is true, this
+                            access binding will be considered.
+                            Structure is documented below.
+                          properties:
+                            description:
+                              description: A user-friendly description of the dataset
+                              type: string
+                            expression:
+                              description: Textual representation of an expression
+                                in Common Expression Language syntax.
+                              type: string
+                            location:
+                              description: |-
+                                The geographic location where the dataset should reside.
+                                See official docs.
+                                There are two types of locations, regional or multi-regional. A regional
+                                location is a specific geographic place, such as Tokyo, and a multi-regional
+                                location is a large geographic area, such as the United States, that
+                                contains at least two geographic places.
+                                The default value is multi-regional location US.
+                                Changing this forces a new resource to be created.
+                              type: string
+                            title:
+                              description: |-
+                                Title for the expression, i.e. a short string describing its purpose.
+                                This can be used e.g. in UIs which allow to enter the expression.
+                              type: string
+                          type: object
                         dataset:
                           description: |-
                             Grants all resources of particular types in a particular dataset read access to the current dataset.
