--- a/package/crds/bigquery.gcp.upbound.io_datatransferconfigs.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_datatransferconfigs.yaml
@@ -1064,6 +1064,90 @@ spec:
                           transfer run failures.
                         type: boolean
                     type: object
+                  encryptionConfiguration:
+                    description: |-
+                      Represents the encryption configuration for a transfer.
+                      Structure is documented below.
+                    properties:
+                      kmsKeyName:
+                        description: The name of the KMS key used for encrypting BigQuery
+                          data.
+                        type: string
+                      kmsKeyNameRef:
+                        description: Reference to a CryptoKey in kms to populate kmsKeyName.
+                        properties:
+                          name:
+                            description: Name of the referenced object.
+                            type: string
+                          policy:
+                            description: Policies for referencing.
+                            properties:
+                              resolution:
+                                default: Required
+                                description: |-
+                                  Resolution specifies whether resolution of this reference is required.
+                                  The default is 'Required', which means the reconcile will fail if the
+                                  reference cannot be resolved. 'Optional' means this reference will be
+                                  a no-op if it cannot be resolved.
+                                enum:
+                                - Required
+                                - Optional
+                                type: string
+                              resolve:
+                                description: |-
+                                  Resolve specifies when this reference should be resolved. The default
+                                  is 'IfNotPresent', which will attempt to resolve the reference only when
+                                  the corresponding field is not present. Use 'Always' to resolve the
+                                  reference on every reconcile.
+                                enum:
+                                - Always
+                                - IfNotPresent
+                                type: string
+                            type: object
+                        required:
+                        - name
+                        type: object
+                      kmsKeyNameSelector:
+                        description: Selector for a CryptoKey in kms to populate kmsKeyName.
+                        properties:
+                          matchControllerRef:
+                            description: |-
+                              MatchControllerRef ensures an object with the same controller reference
+                              as the selecting object is selected.
+                            type: boolean
+                          matchLabels:
+                            additionalProperties:
+                              type: string
+                            description: MatchLabels ensures an object with matching
+                              labels is selected.
+                            type: object
+                          policy:
+                            description: Policies for selection.
+                            properties:
+                              resolution:
+                                default: Required
+                                description: |-
+                                  Resolution specifies whether resolution of this reference is required.
+                                  The default is 'Required', which means the reconcile will fail if the
+                                  reference cannot be resolved. 'Optional' means this reference will be
+                                  a no-op if it cannot be resolved.
+                                enum:
+                                - Required
+                                - Optional
+                                type: string
+                              resolve:
+                                description: |-
+                                  Resolve specifies when this reference should be resolved. The default
+                                  is 'IfNotPresent', which will attempt to resolve the reference only when
+                                  the corresponding field is not present. Use 'Always' to resolve the
+                                  reference on every reconcile.
+                                enum:
+                                - Always
+                                - IfNotPresent
+                                type: string
+                            type: object
+                        type: object
+                    type: object
                   location:
                     description: |-
                       The geographic location where the transfer config should reside.
@@ -1287,6 +1371,90 @@ spec:
                         description: If true, email notifications will be sent on
                           transfer run failures.
                         type: boolean
+                    type: object
+                  encryptionConfiguration:
+                    description: |-
+                      Represents the encryption configuration for a transfer.
+                      Structure is documented below.
+                    properties:
+                      kmsKeyName:
+                        description: The name of the KMS key used for encrypting BigQuery
+                          data.
+                        type: string
+                      kmsKeyNameRef:
+                        description: Reference to a CryptoKey in kms to populate kmsKeyName.
+                        properties:
+                          name:
+                            description: Name of the referenced object.
+                            type: string
+                          policy:
+                            description: Policies for referencing.
+                            properties:
+                              resolution:
+                                default: Required
+                                description: |-
+                                  Resolution specifies whether resolution of this reference is required.
+                                  The default is 'Required', which means the reconcile will fail if the
+                                  reference cannot be resolved. 'Optional' means this reference will be
+                                  a no-op if it cannot be resolved.
+                                enum:
+                                - Required
+                                - Optional
+                                type: string
+                              resolve:
+                                description: |-
+                                  Resolve specifies when this reference should be resolved. The default
+                                  is 'IfNotPresent', which will attempt to resolve the reference only when
+                                  the corresponding field is not present. Use 'Always' to resolve the
+                                  reference on every reconcile.
+                                enum:
+                                - Always
+                                - IfNotPresent
+                                type: string
+                            type: object
+                        required:
+                        - name
+                        type: object
+                      kmsKeyNameSelector:
+                        description: Selector for a CryptoKey in kms to populate kmsKeyName.
+                        properties:
+                          matchControllerRef:
+                            description: |-
+                              MatchControllerRef ensures an object with the same controller reference
+                              as the selecting object is selected.
+                            type: boolean
+                          matchLabels:
+                            additionalProperties:
+                              type: string
+                            description: MatchLabels ensures an object with matching
+                              labels is selected.
+                            type: object
+                          policy:
+                            description: Policies for selection.
+                            properties:
+                              resolution:
+                                default: Required
+                                description: |-
+                                  Resolution specifies whether resolution of this reference is required.
+                                  The default is 'Required', which means the reconcile will fail if the
+                                  reference cannot be resolved. 'Optional' means this reference will be
+                                  a no-op if it cannot be resolved.
+                                enum:
+                                - Required
+                                - Optional
+                                type: string
+                              resolve:
+                                description: |-
+                                  Resolve specifies when this reference should be resolved. The default
+                                  is 'IfNotPresent', which will attempt to resolve the reference only when
+                                  the corresponding field is not present. Use 'Always' to resolve the
+                                  reference on every reconcile.
+                                enum:
+                                - Always
+                                - IfNotPresent
+                                type: string
+                            type: object
+                        type: object
                     type: object
                   location:
                     description: |-
@@ -1611,6 +1779,16 @@ spec:
                         description: If true, email notifications will be sent on
                           transfer run failures.
                         type: boolean
+                    type: object
+                  encryptionConfiguration:
+                    description: |-
+                      Represents the encryption configuration for a transfer.
+                      Structure is documented below.
+                    properties:
+                      kmsKeyName:
+                        description: The name of the KMS key used for encrypting BigQuery
+                          data.
+                        type: string
                     type: object
                   id:
                     description: an identifier for the resource with format {{name}}
