--- a/package/crds/bigquery.gcp.upbound.io_tables.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_tables.yaml
@@ -2441,12 +2441,30 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  allowResourceTagsOnDeletion:
-                    description: |-
-                      If set to true, it allows table
-                      deletion when there are still resource tags attached. The default value is
-                      false.
-                    type: boolean
+                  biglakeConfiguration:
+                    description: Specifies the configuration of a BigLake managed
+                      table. Structure is documented below
+                    properties:
+                      connectionId:
+                        description: |-
+                          The connection specifying the credentials to be used to
+                          read and write to external storage, such as Cloud Storage. The connection_id can
+                          have the form "<project_id>.<location_id>.<connection_id>" or
+                          projects/<project_id>/locations/<location_id>/connections/<connection_id>".
+                        type: string
+                      fileFormat:
+                        description: The file format the table data is stored in.
+                        type: string
+                      storageUri:
+                        description: |-
+                          The fully qualified location prefix of the external folder where table data
+                          is stored. The '*' wildcard character is not allowed. The URI should be in the format "gs://bucket/path_to_table/"
+                        type: string
+                      tableFormat:
+                        description: The table format the metadata only snapshots
+                          are stored in.
+                        type: string
+                    type: object
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -2572,7 +2590,7 @@ spec:
                     properties:
                       autodetect:
                         description: |-
-                          - Let BigQuery try to autodetect the schema
+                          Let BigQuery try to autodetect the schema
                           and format of the table.
                         type: boolean
                       avroOptions:
@@ -2927,7 +2945,7 @@ spec:
                     type: object
                   maxStaleness:
                     description: |-
-                      :  The maximum staleness of data that could be
+                      The maximum staleness of data that could be
                       returned when the table (or stale MV) is queried. Staleness encoded as a
                       string encoding of SQL IntervalValue
                       type.
@@ -2997,36 +3015,38 @@ spec:
                           properties:
                             columnReferences:
                               description: |-
-                                :  The pair of the foreign key column and primary key column.
+                                The pair of the foreign key column and primary key column.
                                 Structure is documented below.
                               properties:
                                 referencedColumn:
                                   description: |-
-                                    :  The column in the primary key that are
+                                    The column in the primary key that are
                                     referenced by the referencingColumn
                                   type: string
                                 referencingColumn:
-                                  description: ':  The column that composes the foreign
-                                    key.'
+                                  description: The column that composes the foreign
+                                    key.
                                   type: string
                               type: object
                             name:
-                              description: ':  Set only if the foreign key constraint
-                                is named.'
+                              description: |-
+                                )
+                                Name of the SerDe.
+                                The maximum length is 256 characters.
                               type: string
                             referencedTable:
                               description: |-
-                                :  The table that holds the primary key
+                                The table that holds the primary key
                                 and is referenced by this foreign key.
                                 Structure is documented below.
                               properties:
                                 datasetId:
-                                  description: ':  The ID of the dataset containing
-                                    this table.'
+                                  description: The ID of the dataset containing this
+                                    table.
                                   type: string
                                 projectId:
-                                  description: ':  The ID of the project containing
-                                    this table.'
+                                  description: The ID of the project containing this
+                                    table.
                                   type: string
                                 tableId:
                                   description: |-
@@ -3046,8 +3066,8 @@ spec:
                           Structure is documented below.
                         properties:
                           columns:
-                            description: ':  The columns that are composed of the
-                              primary key constraint.'
+                            description: The columns that are composed of the primary
+                              key constraint.
                             items:
                               type: string
                             type: array
@@ -3133,12 +3153,30 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
-                  allowResourceTagsOnDeletion:
-                    description: |-
-                      If set to true, it allows table
-                      deletion when there are still resource tags attached. The default value is
-                      false.
-                    type: boolean
+                  biglakeConfiguration:
+                    description: Specifies the configuration of a BigLake managed
+                      table. Structure is documented below
+                    properties:
+                      connectionId:
+                        description: |-
+                          The connection specifying the credentials to be used to
+                          read and write to external storage, such as Cloud Storage. The connection_id can
+                          have the form "<project_id>.<location_id>.<connection_id>" or
+                          projects/<project_id>/locations/<location_id>/connections/<connection_id>".
+                        type: string
+                      fileFormat:
+                        description: The file format the table data is stored in.
+                        type: string
+                      storageUri:
+                        description: |-
+                          The fully qualified location prefix of the external folder where table data
+                          is stored. The '*' wildcard character is not allowed. The URI should be in the format "gs://bucket/path_to_table/"
+                        type: string
+                      tableFormat:
+                        description: The table format the metadata only snapshots
+                          are stored in.
+                        type: string
+                    type: object
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -3185,7 +3223,7 @@ spec:
                     properties:
                       autodetect:
                         description: |-
-                          - Let BigQuery try to autodetect the schema
+                          Let BigQuery try to autodetect the schema
                           and format of the table.
                         type: boolean
                       avroOptions:
@@ -3540,7 +3578,7 @@ spec:
                     type: object
                   maxStaleness:
                     description: |-
-                      :  The maximum staleness of data that could be
+                      The maximum staleness of data that could be
                       returned when the table (or stale MV) is queried. Staleness encoded as a
                       string encoding of SQL IntervalValue
                       type.
@@ -3605,32 +3643,34 @@ spec:
                           properties:
                             columnReferences:
                               description: |-
-                                :  The pair of the foreign key column and primary key column.
+                                The pair of the foreign key column and primary key column.
                                 Structure is documented below.
                               properties:
                                 referencedColumn:
                                   description: |-
-                                    :  The column in the primary key that are
+                                    The column in the primary key that are
                                     referenced by the referencingColumn
                                   type: string
                                 referencingColumn:
-                                  description: ':  The column that composes the foreign
-                                    key.'
+                                  description: The column that composes the foreign
+                                    key.
                                   type: string
                               type: object
                             name:
-                              description: ':  Set only if the foreign key constraint
-                                is named.'
+                              description: |-
+                                )
+                                Name of the SerDe.
+                                The maximum length is 256 characters.
                               type: string
                             referencedTable:
                               description: |-
-                                :  The table that holds the primary key
+                                The table that holds the primary key
                                 and is referenced by this foreign key.
                                 Structure is documented below.
                               properties:
                                 projectId:
-                                  description: ':  The ID of the project containing
-                                    this table.'
+                                  description: The ID of the project containing this
+                                    table.
                                   type: string
                                 tableId:
                                   description: |-
@@ -3648,8 +3688,8 @@ spec:
                           Structure is documented below.
                         properties:
                           columns:
-                            description: ':  The columns that are composed of the
-                              primary key constraint.'
+                            description: The columns that are composed of the primary
+                              key constraint.
                             items:
                               type: string
                             type: array
@@ -3894,12 +3934,30 @@ spec:
             properties:
               atProvider:
                 properties:
-                  allowResourceTagsOnDeletion:
-                    description: |-
-                      If set to true, it allows table
-                      deletion when there are still resource tags attached. The default value is
-                      false.
-                    type: boolean
+                  biglakeConfiguration:
+                    description: Specifies the configuration of a BigLake managed
+                      table. Structure is documented below
+                    properties:
+                      connectionId:
+                        description: |-
+                          The connection specifying the credentials to be used to
+                          read and write to external storage, such as Cloud Storage. The connection_id can
+                          have the form "<project_id>.<location_id>.<connection_id>" or
+                          projects/<project_id>/locations/<location_id>/connections/<connection_id>".
+                        type: string
+                      fileFormat:
+                        description: The file format the table data is stored in.
+                        type: string
+                      storageUri:
+                        description: |-
+                          The fully qualified location prefix of the external folder where table data
+                          is stored. The '*' wildcard character is not allowed. The URI should be in the format "gs://bucket/path_to_table/"
+                        type: string
+                      tableFormat:
+                        description: The table format the metadata only snapshots
+                          are stored in.
+                        type: string
+                    type: object
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -3967,7 +4025,7 @@ spec:
                     properties:
                       autodetect:
                         description: |-
-                          - Let BigQuery try to autodetect the schema
+                          Let BigQuery try to autodetect the schema
                           and format of the table.
                         type: boolean
                       avroOptions:
@@ -4291,7 +4349,7 @@ spec:
                     description: A descriptive name for the table.
                     type: string
                   id:
-                    description: an identifier for the resource with format projects/{{project}}/datasets/{{dataset}}/tables/{{name}}
+                    description: An identifier for the resource with format projects/{{project}}/datasets/{{dataset}}/tables/{{name}}
                     type: string
                   labels:
                     additionalProperties:
@@ -4333,7 +4391,7 @@ spec:
                     type: object
                   maxStaleness:
                     description: |-
-                      :  The maximum staleness of data that could be
+                      The maximum staleness of data that could be
                       returned when the table (or stale MV) is queried. Staleness encoded as a
                       string encoding of SQL IntervalValue
                       type.
@@ -4418,36 +4476,38 @@ spec:
                           properties:
                             columnReferences:
                               description: |-
-                                :  The pair of the foreign key column and primary key column.
+                                The pair of the foreign key column and primary key column.
                                 Structure is documented below.
                               properties:
                                 referencedColumn:
                                   description: |-
-                                    :  The column in the primary key that are
+                                    The column in the primary key that are
                                     referenced by the referencingColumn
                                   type: string
                                 referencingColumn:
-                                  description: ':  The column that composes the foreign
-                                    key.'
+                                  description: The column that composes the foreign
+                                    key.
                                   type: string
                               type: object
                             name:
-                              description: ':  Set only if the foreign key constraint
-                                is named.'
+                              description: |-
+                                )
+                                Name of the SerDe.
+                                The maximum length is 256 characters.
                               type: string
                             referencedTable:
                               description: |-
-                                :  The table that holds the primary key
+                                The table that holds the primary key
                                 and is referenced by this foreign key.
                                 Structure is documented below.
                               properties:
                                 datasetId:
-                                  description: ':  The ID of the dataset containing
-                                    this table.'
+                                  description: The ID of the dataset containing this
+                                    table.
                                   type: string
                                 projectId:
-                                  description: ':  The ID of the project containing
-                                    this table.'
+                                  description: The ID of the project containing this
+                                    table.
                                   type: string
                                 tableId:
                                   description: |-
@@ -4465,8 +4525,8 @@ spec:
                           Structure is documented below.
                         properties:
                           columns:
-                            description: ':  The columns that are composed of the
-                              primary key constraint.'
+                            description: The columns that are composed of the primary
+                              key constraint.
                             items:
                               type: string
                             type: array
